fix buttons on mobiles 2

--- a/src/common/styles/mixins.scss
+++ b/src/common/styles/mixins.scss
@@ -47,7 +47,7 @@ $secondaryLight: #ffffff;
     transition: 0.5s;
     border-radius: 5px;
     width: 100px;
-    height: 30px;
+    min-height: 30px;
 
     &:hover {
       background-color: $darkAccentText;
